<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/registerMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        style="@style/SCREEN">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="30dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="14dp"
                android:layout_marginBottom="16dp"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/icono_app"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registro"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Completa los campos para crear tu cuenta"/>

        </LinearLayout>

        <EditText
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:id="@+id/txtNombres"
            style="@style/TEXT_CONST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:padding="14dp"
            android:background="@drawable/bg_edittext_rounded"/>

        <EditText
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:id="@+id/txtApellidos"
            style="@style/TEXT_CONST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:inputType="textPersonName"
            android:hint="@string/last_name"
            android:padding="14dp"
            android:background="@drawable/bg_edittext_rounded"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:id="@+id/txtCorreo"
            style="@style/TEXT_CONST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="12"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="14dp"
            android:background="@drawable/bg_edittext_rounded"
            android:layout_marginTop="16dp"/>

        <EditText
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:id="@+id/txtPassword"
            style="@style/TEXT_CONST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="12"
            android:textColorHint="@color/gray"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="14dp"
            android:background="@drawable/bg_edittext_rounded"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginTop="34dp"
            android:backgroundTint="@color/primary"
            android:layout_gravity="center"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"/>

        <TextView
            android:id="@+id/loginRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="¿Ya tienes cuenta? Accede aqui"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            />

    </LinearLayout>

</ScrollView>
